fix shift function

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -62,6 +62,7 @@ body {
     padding: 0 10px;
     border-radius: 5px;
     position: relative;
+    transition: all ease 0.2s;
     & img {
         width: 15px;
     }
@@ -69,10 +70,18 @@ body {
     &--pressed,
     &:active {
         background-color: #314499;
+        color: #fafafa;
+    }
+    &:hover {
+        background-color: #4a5fb9;
     }
     &-util {
         color: #6778c2;
         border-bottom: solid 3px #314499;
+        &:hover {
+            background-color: #314499;
+            color: #fafafa;
+        }
     }
     &-backspace,
     &-enter,
@@ -85,6 +94,14 @@ body {
     }
     &-space {
         min-width: 295px;
+    }
+    &-arrow {
+        &up,
+        &left,
+        &down,
+        &right {
+            background-color: #4a5fb9;
+        }
     }
 }
 
